<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buyer.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarsettings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/close_setting_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:text="@string/close"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_alignParentStart="true"
                    />

                <TextView
                    android:id="@+id/update_account_settings_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:text="@string/update"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="12dp"
                    />

            </RelativeLayout>
            

        </androidx.appcompat.widget.Toolbar>
        
    </com.google.android.material.appbar.AppBarLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_below="@id/appBarsettings"
        android:src="@drawable/profile"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/profile_image_change_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/change_profile"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_below="@id/settings_profile_image"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="5dp"
        />

    <EditText
        android:id="@+id/settings_phone_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="5dp"
        android:layout_below="@id/profile_image_change_btn"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:layout_margin="20dp"
        android:gravity="center"
        android:background="@drawable/settingsfields"
        android:importantForAutofill="no" tools:targetApi="o" />

    <EditText
        android:id="@+id/settings_full_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="5dp"
        android:layout_below="@id/settings_phone_number"
        android:hint="@string/name"
        android:layout_margin="20dp"
        android:gravity="center"
        android:background="@drawable/settingsfields"
        android:importantForAutofill="no" tools:targetApi="o"
        android:inputType="" />

    <EditText
        android:id="@+id/settings_adddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="5dp"
        android:layout_below="@id/settings_full_name"
        android:hint="@string/address"
        android:layout_margin="20dp"
        android:gravity="center"
        android:background="@drawable/settingsfields"
        android:autofillHints="" tools:targetApi="o"
        android:inputType="" />

    <Button
        android:id="@+id/settings_securityQuestions"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="5dp"
        android:layout_below="@id/settings_adddress"
        android:layout_margin="20dp"
        android:text="Set Security Questions ?"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="17dp"
        android:textStyle="bold|normal"
        android:background="@drawable/registerbtn"
         />




</RelativeLayout>